--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 html{
 	scroll-behavior: smooth;
 	box-sizing: border-box;
-	/*cursor: none;*/
+	cursor: none;
 }
 
 *, *:before, *:after{
@@ -19,6 +19,7 @@ body{
 	margin: 0;
 	font-family: 'Montserrat', sans-serif;
 	overflow-x: hidden;
+	cursor: none;
 }
 
 
@@ -36,6 +37,7 @@ body{
 
 a{
 	text-decoration: none;
+	cursor: none;
 }
 
 .link_deco{
