--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,7 @@ a{
 	animation-iteration-count: infinite;
 }
 
-@keyframes waves {
-	0%{background-position-x: 0vw;}
-	100%{background-position-x: 100vw; }
-}
+
 
 .tagline{
 	font-size: 2.5rem;
@@ -149,7 +146,7 @@ a{
 
 .Contact{
 	color: #E8E8E8;
-	height: 50vh;
+	height: 25vh;
 	background-color: #624FB2;
 	box-shadow: 0px -32px 30px -15px rgba(0,0,0,0.3);
 }
@@ -169,6 +166,35 @@ h3{
 h2{
     transition: transform 0.1s linear;
 }
+
+
+.btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  font-size: 16px;
+}
+
+
+.socials{
+	display: flex;
+	justify-content: space-between;
+	width: 10%;
+	
+}
+
+.social_button{
+	background-color: rgba(0,0,0,0.00);
+	border: none;
+}
+
+.social_icon{
+	color: white;
+	font-size: 2rem;
+}
+
+/* ------------- CUSTOM CURSOR ------------- */
 
 
 .cursor {
@@ -230,6 +256,10 @@ h2{
 	transform: scale(2);
 }
 
+
+/* ------------- CAROUSSEL ------------- */
+
+
 .caroussel_wrapper{
 	margin-top: 5vh;
 	width: 100vw;
@@ -271,6 +301,10 @@ video{
 }
 
 
+/* ------------- KEYFRAMES ------------- */
+
+
+
 @keyframes open_slide_anim{
 	0% {transform: translateX(-500px);
 		opacity: 0%;
@@ -294,7 +328,13 @@ video{
 }
 
 
+@keyframes waves {
+	0%{background-position-x: 0vw;}
+	100%{background-position-x: 100vw; }
+}
 
+
+/* ------------- MEDIA QUERIES ------------- */
 
 
 @media screen and (max-width: 1030px) and (orientation: portrait) {
@@ -311,15 +351,15 @@ video{
 	.home_section{
 	    height: 110vh;
 	}
-	
+
 	h3{
 		font-size: 3.5rem;
 	}
-	
+
 	.tagline{
 		font-size: 4rem;
 	}
-	
+
 	body{
 		font-size: 1.5rem;
 	}
